--- a/store/index.html
+++ b/store/index.html
@@ -120,20 +120,87 @@
         <div class="bg-primary" style="padding-bottom: 1em;">
             <div class="container">
                 <h3 style="text-align: center;">Recovery Packages</h3>
-                <div
-                    class="row">
+                <div class="row">
                     <!-- Here goes all the card prices CREATE NEW ROW EVERY 3 CARDS -->
                     <div class="col">
                         <div class="card shop-item" style="width: 18rem;">
                             <div class="card-body">
-                                <h6 style="text-align: center;">recovery pkg name</h6>
-                                <h3>$price</h3>
+                                <h6 style="text-align: center;">Starter Recovery PKG</h6>
+                                <h3>$3</h3>
                                 <p class="card-text">Includes</p>
                             </div>
                             <ul class="list-group list-group-flush">
-                                <li class="list-group-item">An item</li>
-                                <li class="list-group-item">A second item</li>
-                                <li class="list-group-item">A third item</li>
+                                <li class="list-group-item">-Half Stats Maxed</li>
+                                <li class="list-group-item">-Level 150</li>
+                                <li class="list-group-item">-Up to $100,000,000</li>
+                                <li class="list-group-item">-1 Modded Outfits</li>
+
+                            </ul>
+                            <div class="card-body">
+                                <a href="#" class="card-link">
+                                    <button class="btn btn-primary">Add to Cart</button>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card shop-item" style="width: 18rem;">
+                            <div class="card-body">
+                                <h6 style="text-align: center;">Basic Recovery PKG</h6>
+                                <h3>$7.50</h3>
+                                <p class="card-text">Includes</p>
+                            </div>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item">-Maxed Stats</li>
+                                <li class="list-group-item">-Level 300</li>
+                                <li class="list-group-item">-Up to $250,000,000</li>
+                                <li class="list-group-item">-1 Modded Outfits</li>
+
+                            </ul>
+                            <div class="card-body">
+                                <a href="#" class="card-link">
+                                    <button class="btn btn-primary">Add to Cart</button>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card shop-item" style="width: 18rem;">
+                            <div class="card-body">
+                                <h6 style="text-align: center;">Standard Recovery PKG</h6>
+                                <h3>$12</h3>
+                                <p class="card-text">Includes</p>
+                            </div>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item">-Maxed Stats</li>
+                                <li class="list-group-item">-Unlock Everything</li>
+                                <li class="list-group-item">-Level 400</li>
+                                <li class="list-group-item">-Up to $500,000,000</li>
+                                <li class="list-group-item">-2 Modded Outfits</li>
+
+                            </ul>
+                            <div class="card-body">
+                                <a href="#" class="card-link">
+                                    <button class="btn btn-primary">Add to Cart</button>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card shop-item" style="width: 18rem;">
+                            <div class="card-body">
+                                <h6 style="text-align: center;">Premium Recovery PKG</h6>
+                                <h3>$12</h3>
+                                <p class="card-text">Includes</p>
+                            </div>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item">-Maxed Stats</li>
+                                <li class="list-group-item">-Unlock Everything</li>
+                                <li class="list-group-item">-Level 1000</li>
+                                <li class="list-group-item">-Up to $750,000,000</li>
+
+                                <li class="list-group-item">-3 Modded Outfits</li>
+
                             </ul>
                             <div class="card-body">
                                 <a href="#" class="card-link">
