--- a/store/index.html
+++ b/store/index.html
@@ -196,10 +196,39 @@
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item">-Maxed Stats</li>
                                 <li class="list-group-item">-Unlock Everything</li>
+                                <li class="list-group-item">-Crew Rank 300</li>
                                 <li class="list-group-item">-Level 1000</li>
                                 <li class="list-group-item">-Up to $750,000,000</li>
 
                                 <li class="list-group-item">-3 Modded Outfits</li>
+
+                            </ul>
+                            <div class="card-body">
+                                <a href="#" class="card-link">
+                                    <button class="btn btn-primary">Add to Cart</button>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <div class="card shop-item" style="width: 18rem;">
+                            <div class="card-body">
+                                <h6 style="text-align: center;">Experienced Recovery PKG</h6>
+                                <h3>$30</h3>
+                                <p class="card-text">Includes</p>
+                            </div>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item">-Maxed Stats</li>
+                                <li class="list-group-item">-Unlock Everything</li>
+                                <li class="list-group-item">-Custom KD</li>
+                                <li class="list-group-item">-Crew Rank Level 750</li>
+                                <li class="list-group-item">-Level 4000</li>
+                                <li class="list-group-item">-Up to $1,000,000,000</li>
+
+                                <li class="list-group-item">-8 Modded Outfits</li>
 
                             </ul>
                             <div class="card-body">
