--- a/store/index.html
+++ b/store/index.html
@@ -238,6 +238,31 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col">
+                        <div class="card shop-item" style="width: 18rem;">
+                            <div class="card-body">
+                                <h6 style="text-align: center;">Want a Custom Recovery PKG?</h6>
+                                <h3>Minimum $5</h3>
+                                <p class="card-text"><a href="/contact" class="card-link">Dicuss Details with ERG via Discord</a></p>
+                            </div>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item">-Maxed Stats</li>
+                                <li class="list-group-item">-Unlock Everything</li>
+                                <li class="list-group-item">-Custom KD</li>
+                                <li class="list-group-item">-Crew Rank Level 750</li>
+                                <li class="list-group-item">-Level 4000</li>
+                                <li class="list-group-item">-Up to $1,000,000,000</li>
+
+                                <li class="list-group-item">-8 Modded Outfits</li>
+
+                            </ul>
+                            <div class="card-body">
+                                <a href="#" class="card-link">
+                                    <button class="btn btn-primary">Add to Cart</button>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
