--- a/store/index.html
+++ b/store/index.html
@@ -246,14 +246,14 @@
                                 <p class="card-text"><a href="/contact" class="card-link">Dicuss Details with ERG via Discord</a></p>
                             </div>
                             <ul class="list-group list-group-flush">
-                                <li class="list-group-item">-Maxed Stats</li>
-                                <li class="list-group-item">-Unlock Everything</li>
-                                <li class="list-group-item">-Custom KD</li>
-                                <li class="list-group-item">-Crew Rank Level 750</li>
-                                <li class="list-group-item">-Level 4000</li>
-                                <li class="list-group-item">-Up to $1,000,000,000</li>
+                                <li class="list-group-item">-??? Stats</li>
+                                <li class="list-group-item">-Unlock ???</li>
+                                <li class="list-group-item">-Custom KD???</li>
+                                <li class="list-group-item">-Crew Rank Level ???</li>
+                                <li class="list-group-item">-Level ???</li>
+                                <li class="list-group-item">-Up to $???</li>
 
-                                <li class="list-group-item">-8 Modded Outfits</li>
+                                <li class="list-group-item">-??? Modded Outfits</li>
 
                             </ul>
                             <div class="card-body">
