--- a/store/index.html
+++ b/store/index.html
@@ -243,9 +243,8 @@
                             <div class="card-body">
                                 <h6 style="text-align: center;">Want a Custom Recovery PKG?</h6>
                                 <h3>Minimum $5</h3>
-                                <p class="card-text"><a href="/contact" class="card-link">Dicuss Details with ERG via Discord</a></p>
                             </div>
-                            <ul class="list-group list-group-flush">
+                            <ul class="list-group list-group-flush" style="border-color: black;">
                                 <li class="list-group-item">-??? Stats</li>
                                 <li class="list-group-item">-Unlock ???</li>
                                 <li class="list-group-item">-Custom KD???</li>
@@ -257,8 +256,8 @@
 
                             </ul>
                             <div class="card-body">
-                                <a href="#" class="card-link">
-                                    <button class="btn btn-primary">Add to Cart</button>
+                                <a href="https://discord.gg/ampXhzA" class="card-link">
+                                    <button class="btn btn-primary">Request</button>
                                 </a>
                             </div>
                         </div>
