--- a/store/index.html
+++ b/store/index.html
@@ -213,7 +213,7 @@
                     
                 </div>
                 <div class="row">
-                    <div class="col">
+                    <div class="col" style="width: 18.75rem">
                         <div class="card shop-item" style="width: 18rem;">
                             <div class="card-body">
                                 <h6 style="text-align: center;">Experienced Recovery PKG</h6>
