--- a/store/index.html
+++ b/store/index.html
@@ -210,10 +210,7 @@
                             </div>
                         </div>
                     </div>
-                    
-                </div>
-                <div class="row">
-                    <div class="col" style="width: 18.75rem">
+                    <div class="col">
                         <div class="card shop-item" style="width: 18rem;">
                             <div class="card-body">
                                 <h6 style="text-align: center;">Experienced Recovery PKG</h6>
@@ -262,6 +259,7 @@
                             </div>
                         </div>
                     </div>
+                    
                 </div>
             </div>
         </div>
