--- a/store/index.html
+++ b/store/index.html
@@ -259,6 +259,30 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col">
+                        <div class="card shop-item" style="width: 18rem;">
+                            <div class="card-body">
+                                <h6 style="text-align: center;">Want a Custom Recovery PKG?</h6>
+                                <h3>Minimum $5</h3>
+                            </div>
+                            <ul class="list-group list-group-flush" style="border-color: black;">
+                                <li class="list-group-item">-??? Stats</li>
+                                <li class="list-group-item">-Unlock ???</li>
+                                <li class="list-group-item">-Custom KD???</li>
+                                <li class="list-group-item">-Crew Rank Level ???</li>
+                                <li class="list-group-item">-Level ???</li>
+                                <li class="list-group-item">-Up to $???</li>
+
+                                <li class="list-group-item">-??? Modded Outfits</li>
+
+                            </ul>
+                            <div class="card-body">
+                                <a href="https://discord.gg/ampXhzA" class="card-link">
+                                    <button class="btn btn-primary">Request</button>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
                     
                 </div>
             </div>
