--- a/store/index.html
+++ b/store/index.html
@@ -122,7 +122,7 @@
                 <h3 style="text-align: center;">Recovery Packages</h3>
                 <div class="row">
                     <!-- Here goes all the card prices CREATE NEW ROW EVERY 3 CARDS -->
-                    <div class="col">
+                    <div class="col-4">
                         <div class="card shop-item" style="width: 18rem;">
                             <div class="card-body">
                                 <h6 style="text-align: center;">Starter Recovery PKG</h6>
@@ -143,7 +143,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col-4">
                         <div class="card shop-item" style="width: 18rem;">
                             <div class="card-body">
                                 <h6 style="text-align: center;">Basic Recovery PKG</h6>
@@ -164,7 +164,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col-4">
                         <div class="card shop-item" style="width: 18rem;">
                             <div class="card-body">
                                 <h6 style="text-align: center;">Standard Recovery PKG</h6>
@@ -186,7 +186,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col-4">
                         <div class="card shop-item" style="width: 18rem;">
                             <div class="card-body">
                                 <h6 style="text-align: center;">Premium Recovery PKG</h6>
@@ -210,7 +210,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col-4">
                         <div class="card shop-item" style="width: 18rem;">
                             <div class="card-body">
                                 <h6 style="text-align: center;">Experienced Recovery PKG</h6>
@@ -235,31 +235,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col">
-                        <div class="card shop-item" style="width: 18rem;">
-                            <div class="card-body">
-                                <h6 style="text-align: center;">Want a Custom Recovery PKG?</h6>
-                                <h3>Minimum $5</h3>
-                            </div>
-                            <ul class="list-group list-group-flush" style="border-color: black;">
-                                <li class="list-group-item">-??? Stats</li>
-                                <li class="list-group-item">-Unlock ???</li>
-                                <li class="list-group-item">-Custom KD???</li>
-                                <li class="list-group-item">-Crew Rank Level ???</li>
-                                <li class="list-group-item">-Level ???</li>
-                                <li class="list-group-item">-Up to $???</li>
-
-                                <li class="list-group-item">-??? Modded Outfits</li>
-
-                            </ul>
-                            <div class="card-body">
-                                <a href="https://discord.gg/ampXhzA" class="card-link">
-                                    <button class="btn btn-primary">Request</button>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col">
+                    <div class="col-4">
                         <div class="card shop-item" style="width: 18rem;">
                             <div class="card-body">
                                 <h6 style="text-align: center;">Want a Custom Recovery PKG?</h6>
