--- a/store/index.html
+++ b/store/index.html
@@ -12,8 +12,7 @@
         <title>GTA 5 Recovery Service</title>
 
 
-        <link
-        href="/css/custom.min.css" rel="stylesheet">
+        <link href="/css/custom.min.css" rel="stylesheet">
         <!-- Bootstrap 5 custom sass file (compiled)-->
         <link href="/css/stylesheet.css" rel="stylesheet">
         <link href="/css/specific.css" rel="stylesheet">
@@ -126,13 +125,13 @@
                         <div class="card shop-item" style="width: 18rem;">
                             <div class="card-body">
                                 <h6 style="text-align: center;">Starter Recovery PKG</h6>
-                                <h3>$3</h3>
+                                <h3>$2.99</h3>
                                 <p class="card-text">Includes</p>
                             </div>
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item">-Half Stats Maxed</li>
                                 <li class="list-group-item">-Level 150</li>
-                                <li class="list-group-item">-Up to $100,000,000</li>
+                                <li class="list-group-item">-$50,000,000</li>
                                 <li class="list-group-item">-1 Modded Outfits</li>
 
                             </ul>
@@ -147,13 +146,13 @@
                         <div class="card shop-item" style="width: 18rem;">
                             <div class="card-body">
                                 <h6 style="text-align: center;">Basic Recovery PKG</h6>
-                                <h3>$7.50</h3>
+                                <h3>$6.99</h3>
                                 <p class="card-text">Includes</p>
                             </div>
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item">-Maxed Stats</li>
                                 <li class="list-group-item">-Level 300</li>
-                                <li class="list-group-item">-Up to $250,000,000</li>
+                                <li class="list-group-item">-$200,000,000</li>
                                 <li class="list-group-item">-1 Modded Outfits</li>
 
                             </ul>
@@ -168,14 +167,14 @@
                         <div class="card shop-item" style="width: 18rem;">
                             <div class="card-body">
                                 <h6 style="text-align: center;">Standard Recovery PKG</h6>
-                                <h3>$15</h3>
+                                <h3>$14.99</h3>
                                 <p class="card-text">Includes</p>
                             </div>
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item">-Maxed Stats</li>
                                 <li class="list-group-item">-Unlock Everything</li>
                                 <li class="list-group-item">-Level 500</li>
-                                <li class="list-group-item">-Up to $500,000,000</li>
+                                <li class="list-group-item">-$500,000,000</li>
                                 <li class="list-group-item">-2 Modded Outfits</li>
 
                             </ul>
@@ -190,15 +189,15 @@
                         <div class="card shop-item" style="width: 18rem;">
                             <div class="card-body">
                                 <h6 style="text-align: center;">Premium Recovery PKG</h6>
-                                <h3>$20</h3>
+                                <h3>$19.99</h3>
                                 <p class="card-text">Includes</p>
                             </div>
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item">-Maxed Stats</li>
                                 <li class="list-group-item">-Unlock Everything</li>
                                 <li class="list-group-item">-Crew Rank 300</li>
-                                <li class="list-group-item">-Level 1000</li>
-                                <li class="list-group-item">-Up to $750,000,000</li>
+                                <li class="list-group-item">-Level 800</li>
+                                <li class="list-group-item">-$750,000,000</li>
 
                                 <li class="list-group-item">-3 Modded Outfits</li>
 
@@ -223,7 +222,7 @@
                                 <li class="list-group-item">-Custom KD</li>
                                 <li class="list-group-item">-Crew Rank Level 750</li>
                                 <li class="list-group-item">-Level 4000</li>
-                                <li class="list-group-item">-Up to $1,000,000,000</li>
+                                <li class="list-group-item">-$1,250,000,000</li>
 
                                 <li class="list-group-item">-8 Modded Outfits</li>
 
@@ -243,13 +242,13 @@
                             </div>
                             <ul class="list-group list-group-flush" style="border-color: black;">
                                 <li class="list-group-item">-??? Stats</li>
-                                <li class="list-group-item">-Unlock ???</li>
+                                <li class="list-group-item">-Unlock Everything???</li>
                                 <li class="list-group-item">-Custom KD???</li>
-                                <li class="list-group-item">-Crew Rank Level ???</li>
-                                <li class="list-group-item">-Level ???</li>
-                                <li class="list-group-item">-Up to $???</li>
+                                <li class="list-group-item">-Up to Crew Rank Level 800</li>
+                                <li class="list-group-item">-Up to Level 8000</li>
+                                <li class="list-group-item">-Up to $1,500,000,000</li>
 
-                                <li class="list-group-item">-??? Modded Outfits</li>
+                                <li class="list-group-item">-Up to 5 Modded Outfits</li>
 
                             </ul>
                             <div class="card-body">
@@ -259,7 +258,6 @@
                             </div>
                         </div>
                     </div>
-                    
                 </div>
             </div>
         </div>
