--- a/store/index.html
+++ b/store/index.html
@@ -165,6 +165,9 @@
                     </div>
                     <div class="col-3">
                         <div class="card shop-item" style="width: 18rem;">
+                            <span class="tags">
+                                <span class="badge rounded-pill bg-primary tag">Best Seller</span>
+                            </span>
                             <div class="card-body">
                                 <h6 style="text-align: center;">Standard Recovery PKG</h6>
                                 <h3>$14.99</h3>
@@ -248,7 +251,7 @@
                                 <li class="list-group-item">-Up to Level 8000</li>
                                 <li class="list-group-item">-Up to $1,500,000,000</li>
 
-                                <li class="list-group-item">-Up to 5 Modded Outfits</li>
+                                <li class="list-group-item">-Up to 8 Modded Outfits</li>
 
                             </ul>
                             <div class="card-body">
