--- a/store/index.html
+++ b/store/index.html
@@ -63,6 +63,9 @@
                             <a class="nav-link" href="/contact">Contact Us</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="/account">Account</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
                         </li>
                     </ul>
